# DeepTile

./: LICENSE  README.md  deeptile.py  pyproject.toml  setup.py  tests.py
data/: sample_tif_masks  sample_tif_masks.tif
deeptile/: __init__.py  algorithms.py  backends.py  data.py  deeptile.py  io.py  iterators.py  jobs.py  nd2.py  profiles.py  segmentation.py  stitch.py  types.py  utils.py
deeptile/algorithms/: __init__.py  base.py  segmentation.py  stitch.py
deeptile/core/: algorithms.py  data.py  iterators.py  jobs.py  lift.py  process.py  profiles.py  trees.py  types.py  utils.py
deeptile/example_algorithms/: __init__.py  segmentation.py  stitch.py
deeptile/extensions/: __init__.py  extras.py  segmentation.py  stitch.py  tile.py
deeptile/numpy/: __init__.py  _lift.py
deeptile/sources/: __init__.py  array.py  function.py  large_image.py  nd2.py  tiff.py
notebooks/: lift.ipynb  nd2.ipynb  tiff.ipynb
notebooks/sample_images/: sample.tif
tests/: test_imports.py  test_io.py  test_stitch.py
