[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepTile"
version = "2.0.3"
description = "Large image tiling and stitching library for scaling Python functions to arbitrary input image sizes."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {email = "wniu721@gmail.com"},
    {name = "William Niu"}
]
keywords = ["machine learning", "deep learning", "image tiling", "image stitching"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python"
]
dependencies = [
    "dask",
    "nd2",
    "numpy",
    "scikit-image",
    "tifffile"
]

[tool.setuptools]
packages = ["deeptile", "deeptile.core", "deeptile.extensions", "deeptile.sources"]
